# amelia-widget

./: .gitignore  README.md  install.sh
cli/: install.sh  package-lock.json  package.json  tsconfig.json
cli/src/: api.ts  main.tsx
cli/src/commands/: chat.ts  health.ts
cli/src/tui/: App.tsx
cosmic-applet/: Cargo.toml  install.sh
cosmic-applet/resources/: com.amelia.CosmicApplet.desktop
cosmic-applet/src/: api.rs  app.rs  main.rs  notify.rs
docs/superpowers/plans/: 2026-07-17-amelia-voice-reply.md
docs/superpowers/specs/: 2026-07-17-amelia-voice-reply-design.md
gnome-extension/: amelia-indicator.js  api.js  extension.js  install.sh  metadata.json  notify.js  stylesheet.css
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: AriaTokens.qml  ChatBubble.qml  ChatWorkspace.qml  GlassPanel.qml  ImmersiveWindow.qml  ModernLoader.qml  configGeneral.qml  main.qml
server/: .env-sample  .gitignore  SOUL.sample.md  USER.sample.md  package-lock.json  package.json
server/.cursor/: mcp.json.sample
server/deploy/: amelia-widget.service.in  install-service.sh
server/scripts/: ha-rest-mcp.mjs
server/src/: agent-busy.ts  agent-manager.ts  agent.ts  chat.ts  debug.ts  errors.ts  main.ts  persona.ts  runs.ts  session.ts  spoken.ts  stream.ts  tts.ts  warmup.ts  ws.ts
server/src/__tests__/: spoken.test.ts
server/src/config/: mcp.ts
